--- a/App.css
+++ b/App.css
@@ -1,38 +1,27 @@
-.App {
-  text-align: center;
+body {
+  background-image: linear-gradient(to right, #ff8177 0%, #ff867a 0%, #ff8c7f 21%, #f99185 52%, #cf556c 78%, #b12a5b 100%);
+  height: 100vh !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.col-md-5{
+  margin-top: 25vh !important ;
+  background-color: wheat !important;
+  padding: 5%;
+}
+input{
+  margin-top: 10px !important;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+button{
+  width: 100px!important;
+  background-color: #b12a5b !important;
+  border-color: #ff867a !important;  
   color: white;
+  font-weight: bold;
 }
-
-.App-link {
-  color: #3e646e;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1{
+  font-weight: bold !important ;
+  
 }
