--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   background-image: linear-gradient(to right, #ff8177 0%, #ff867a 0%, #ff8c7f 21%, #f99185 52%, #cf556c 78%, #b12a5b 100%);
   height: 100vh !important;
 }
@@ -9,15 +9,17 @@ code {
 }
 
 .col-md-5{
-  margin-top: 200px !important;
+  margin-top: 25vh !important ;
+  background-color: wheat !important;
+  padding: 5%;
 }
-
 input{
-  width: 80%!important;
+  margin-top: 10px !important;
+
 }
 
 button{
-  width: 80px!important;
+  width: 100px!important;
   background-color: #b12a5b !important;
   border-color: #ff867a !important;  
   color: white;
@@ -28,4 +30,4 @@ h1{
   
 }
 
-
+ */
